@@ -107,7 +107,7 @@ if (isset($create)) {
 		exit;
        	}
 } else if (isset($cancel) || isset($dismiss)) {
-	header("Location: manage_users.php");
+	header("Location: " . makeGalleryUrl("manage_users.php"));
 }
 
 ?>
