@@ -1,3 +1,8 @@
+2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b53
+
+	* Change: Modify Location: headers to be standards compliant
+	  (absoluteURI).  [RFE 939002]
+
 2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b52
 
 	* Change: Correct if(getAlbumName) checks to if(isAlbum)
